--- a/projects/web-socket-client/package.json
+++ b/projects/web-socket-client/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@happymonkey/websocket-client",
-  "version": "1.0.10",
+  "version": "1.0.13",
   "repository": {
     "type" : "git",
     "url" : "https://github.com/happy-monkey/websocket-client"
   },
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "~9.1.3",
+    "@angular/core": "~9.1.3"
   }
 }
